# phpls

./: Cargo.toml  Readme.md
src/: Makefile  balle.php  config.rs  issues.rs  main.rs
src/codetree/: codetree.rs  file_scanner.rs  mod.rs  workspace.rs
src/phpls/: goto_declaration.rs  goto_definition.rs  goto_type_definition.rs  hover.rs  instance.rs  locations.rs  mod.rs  stdioserver.rs  tcpserver.rs
src/phpparser/: mod.rs  phpfile.rs
src/storage/: symbols.rs
src/type_analysis/types/: mod.rs  type_defs.rs  type_lexer.rs  type_origins.rs  type_parser.rs
