[package]
name = "phpls"
version = "0.1.0"
authors = ["Bjørn Tore Hagen <bjorn.hagen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.25.3"
regex = "1.5.4"
rust_lsp = { path = "../RustLSP" }    
serde_json = "1.0.64"
itertools = "0.10.1"
url = {version = "2.0.0", features = ["serde"]}


phpanalyzer = { path = "../phpanalyzer" }
